--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                  <a>Careers</a>
                  <a>Blog</a>
                  <a>About Amazon</a>
-                 <a>Investor Relations</a>
+                 <a>Investors</a>
                  <a>Amazon Devices</a>
                  <a>Amazon Science</a>
             </ul>
